color contrast fix

--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -54,7 +54,7 @@
 
     .navigation a {
         display: block;
-        color: #eee;
+        color: #000;
         padding: 0.75rem;
         text-decoration: none;
         text-align: center;
