--- a/styles/temples.css
+++ b/styles/temples.css
@@ -73,7 +73,7 @@ nav {
     display: flex;
     flex-direction: column;
     list-style: none;
-    color: #fff;
+    color: #000;
 }
 
 .navigation a {
@@ -81,7 +81,7 @@ nav {
     padding: 1rem;
     text-align: center;
     text-decoration: none;
-    color: #fff;
+    color: #000;
 }
 
 .navigation a:hover {
